# RubiksCubeRobot

./: CMakeLists.txt  README.md  cube.hpp  imageProcess.cpp  main.cpp  piece.hpp
DIY/: MyProject_Parts_List.xlsx
include/: cube.hpp  imageProcess.hpp  pca9685.hpp  rotMatricies.hpp  servo.hpp
src/: imageProcess.cpp  main.cpp  pca9685.cpp  takePicture.cpp
